# redacta

./: .gitignore  CLAUDE.md  Makefile  README.md
.claude/commands/: commit.md
backend/: .env.example  config.py  main.py  pricing.py  pyproject.toml  redaction_agent.py  retry.py
frontend/: biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: redaction.ts
frontend/src/components/: ApiKeyGate.tsx  ApiKeyModal.tsx  DownloadBar.tsx  Header.tsx  PdfPanel.tsx  ProcessingPanel.tsx  PromptPanel.tsx  RedactaLogo.tsx  RedactionWorkspace.tsx  ResultPanel.tsx  ScanOverlay.tsx  UploadZone.tsx
frontend/src/components/hooks/: use-debounced-dimensions.ts  use-screen-size.ts
frontend/src/components/ui/: pixel-trail.tsx
frontend/src/engine/: gemini.ts  orchestrator.ts  pdf.ts  presets.ts  pricing.ts  types.ts
frontend/src/engine/prompts/: index.ts  pseudonymisation.ts  redaction.ts
frontend/src/engine/providers/: gemini.ts  openai.ts  registry.ts  shared.ts  types.ts
frontend/src/hooks/: useApiKey.ts  useProviderKeys.ts
frontend/src/lib/: audit-log-pdf.ts  audit-log.ts  pdf-store.ts  utils.ts
frontend/src/pages/: LandingPage.tsx  UploadPage.tsx  WorkspacePage.tsx
scripts/: generate-og-image.mjs
